fixed card fade in on mobile

--- a/Lost-Seeker/src/index.css
+++ b/Lost-Seeker/src/index.css
@@ -17,7 +17,7 @@ html {
 .hidden-card .card {
   opacity: 0;
 
-  transform: translateX(-400px);
+  transform: translateX(-300px);
   transition: all 1s ease-in-out;
 }
 
